# voice-recorder

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
voice_recorder/: __init__.py  audio_recorder.py  config.py  hotkey_listener.py  state_manager.py  text_injector.py  transcriber.py  ui.py
