[project]
name = "voice-recorder"
version = "0.1.0"
description = "Local voice-to-text recorder with global hotkey for Mac"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
    "pynput>=1.7.6",
    "pyperclip>=1.8.2",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]
